--- a/parts.tex
+++ b/parts.tex
@@ -74,3 +74,5 @@ This part has the following chapters:
 \item
   \emph{Chapter 18, Patterns for Concurrency}
 \end{itemize}
+
+\input{./chapters_eng/17-The_Visitor_Pattern_and_Multiple_Dispatch.tex}
